rust-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: rust-svc
  labels:
     app: rust
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 30009
    protocol: TCP
  selector:
     app: rust
